Fixed ProductDetail aligned

--- a/Frontend/src/CSS/ProductDetail.css
+++ b/Frontend/src/CSS/ProductDetail.css
@@ -19,9 +19,11 @@
 }
 
 .product-detail-layer {
-  position: fixed;
+  /* position: fixed;
   top: 0;
-  left: 0;
+  left: 0; */
+  display: flex;
+  justify-content: center;
   width: 100%;
   z-index: 999;
   height: 100vh;
@@ -34,14 +36,13 @@
   align-items: center;
   position: fixed;
   top: 70px;
-  left: 160px;
+  /* left: 10rem; */
   /* border: 4px solid rgb(205, 212, 247); */
   width: 80%;
   height: 80%;
   background-color: rgb(254, 254, 254);
   z-index: 1000;
   border-radius: 7px;
-
   box-shadow: 10px 10px 15px 4px rgb(100, 101, 101);
 }
 
